--- a/section6/v1-springboot/loans/pom.xml
+++ b/section6/v1-springboot/loans/pom.xml
@@ -66,12 +66,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.2</version>
 				<configuration>
-					<image>
-						<name>marinass/${project.artifactId}:s4</name>
-					</image>
+					<to>
+						<image>marinass/${project.artifactId}:s6</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
