fix application configs

--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/config/accounts-qa.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/config/accounts-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "2.0"
 
-cards:
+accounts:
   message: "Welcome to EazyBank cards related QA APIs "
   contactDetails:
     name: "Smitgh Ray - QA Lead"
