--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -2,15 +2,18 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    active: git
   cloud:
     config:
       server:
-        native:
-          # native:
-          # search-locations: "classpath:/config"
-          search-locations: "file:///C:/Users/marina/Documents/config"
-
+        git:
+          uri: "https://github.com/MarinaSolovyeva/microservices-bank-config.git"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+encrypt:
+  key: "45D81EC1EF61DF9AD8D3E5BB397F9"
 server:
   port: 8071
 
