add correlationId, fix docker compose, add filters

--- a/section9/accounts/src/main/resources/application.yml
+++ b/section9/accounts/src/main/resources/application.yml
@@ -26,12 +26,25 @@ management:
     web:
       exposure:
         include: "*"
-  info:
-    env:
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
       enabled: true
   endpoint:
     shutdown:
       enabled: true
+    health:
+      probes:
+        enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
 eureka:
   instance:
     preferIpAddress: true
@@ -41,14 +54,14 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8070/eureka/
 
-endpoints:
-  shutdown:
-    enabled: true
-
-# for eureka dashboard
 info:
   app:
     name: "accounts"
     description: "Eazy Bank Accounts Application"
-    version: "1.0"
+    version: "1.0.0"
 
+logging:
+  level:
+    com:
+      solovieva:
+        accounts: DEBUG
