--- a/section_11/docker-compose/prod/docker-compose.yml
+++ b/section_11/docker-compose/prod/docker-compose.yml
@@ -215,7 +215,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "marinassconfigserver:s11"
+    image: "marinass/configserver:s11"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -232,7 +232,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "marinasseurekaserver:s11"
+    image: "marinass/eurekaserver:s11"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -253,7 +253,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "marinassaccounts:s11"
+    image: "marinass/accounts:s11"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -276,7 +276,7 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "marinassloans:s11"
+    image: "marinass/loans:s11"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -299,7 +299,7 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "marinasscards:s11"
+    image: "marinass/cards:s11"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -322,7 +322,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "marinassgatewayserver:s11"
+    image: "marinass/gatewayserver:s11"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
