--- a/section_15/kubernates/3_configserver.yml
+++ b/section_15/kubernates/3_configserver.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: configserver
-          image: marinass/configserver:s14 #by default docker.io/marinass/configserver:s14
+          image: marinass/configserver:s14
           ports:
             - containerPort: 8071
 ---
